<resources>
    <string name="app_name">Opciones</string>
    <string name="txt_valor1">Primer Valor</string>
    <string name="txt_valor2">Segundo Valor</string>
    <string name="rb_suma">Suma</string>
    <string name="rb_resta">Resta</string>
    <string name="rb_multiplicacion">Multiplicacion</string>
    <string name="rb_division">Division</string>
    <string name="btn_calcular">Calcular</string>
    <string name="txt_resultado">Resultado</string>
</resources>